# lcfm-validation-extraction

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml  pyproject.toml
.github/workflows/: pytest.yml  test_artifactory.yml
notebooks/: 29TNE_shape.geojson  README.md  lcm10_stac.ipynb  lcm10_stac.py  sentinel1_stac.ipynb
resources/: 100perc_sample_10m_epsg3857_idloc_selection.dbf  100perc_sample_10m_epsg3857_idloc_selection.qmd  100perc_sample_10m_epsg3857_idloc_selection.shp  100perc_sample_10m_epsg3857_idloc_selection.shx  LCFM_ONE_SAMPLE_Grids10m.geojson  utm_zone_32611_square_100m.gpkg  utm_zone_32737_square_100m.gpkg
results/: LCFM_LCM-10_V008_2020_10637_MAP.tif  LCFM_LCM-10_V008_2020_1134_MAP.tif  LCFM_LCM-10_V008_2020_1674_MAP.tif  LCFM_LCM-10_V008_2020_2232_MAP.tif  LCFM_LCM-10_V008_2020_287_MAP.tif  LCFM_LCM-10_V008_2020_296_MAP.tif  LCFM_LCM-10_V008_2020_3020_MAP.tif  LCFM_LCM-10_V008_2020_334_MAP.tif  LCFM_LCM-10_V008_2020_8135_MAP.tif  LCFM_LCM-10_V008_2020_9525_MAP.tif  LCFM_TCD-10_V100_2020_1134_MAP.tif  LCFM_TCD-10_V100_2020_1674_MAP.tif  LCFM_TCD-10_V100_2020_3020_MAP.tif
results/gdalinfo/: LCFM_LCM-10_V008_2020_10637_MAP.json  LCFM_LCM-10_V008_2020_1134_MAP.json  LCFM_LCM-10_V008_2020_1674_MAP.json  LCFM_LCM-10_V008_2020_2232_MAP.json  LCFM_LCM-10_V008_2020_287_MAP.json  LCFM_LCM-10_V008_2020_296_MAP.json  LCFM_LCM-10_V008_2020_3020_MAP.json  LCFM_LCM-10_V008_2020_334_MAP.json  LCFM_LCM-10_V008_2020_8135_MAP.json  LCFM_LCM-10_V008_2020_9525_MAP.json
scripts/: hello_vegtemplate.py  lcm10_stac.py  validation_extraction.py
tests/: example_test.py
