[project]
name = "veg_project"
dynamic = ["version"]
authors = [
  {name="VITO RS Vegetation team"},
]
description = "project_name"
requires-python = ">=3.11, <3.12"
dependencies = [
  "boto3",
  "dotenv",
  "geopandas",
  "loguru",
  "matplotlib",
  "numpy < 2",
  "pystac_client",
  "rasterio",
  "rioxarray",
  "stackstac",
]

[dependency-groups]
dev = ["pre-commit>=4.1.0", "pytest>=8.3.0", "ruff>=0.11.0"]

[project.optional-dependencies]
jupyter = ["jupyter>=1.1", "ipython>=8.21","ipywidgets==8.1.5", "ipykernel==6.29.5"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veg_template"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/dist",
  "/notebooks",
  "/scripts"
]

[tool.hatch.version]
path = "src/veg_template/_version.py"

[tool.ruff]
exclude = ["*.ipynb"]
output-format = "github"